source/less/blocks/companion-card.less
.companion-card {
  display: flex;
  flex-direction: column;
  width: 270px;
  color: @special-grey;
  background-color: @white;
  border-radius: 10px;
  filter: drop-shadow(0 0 0 fade(@black, 16%));
  transition: filter 0.4s ease;

  &:hover,
  &:focus-within {
    filter: drop-shadow(0 4px 9px fade(@black, 16%));
  }

  @media (min-width: @tablet-width) {
    width: 285px;
    margin-left: 0;
    margin-right: 0;
    border-radius: 20px;
  }
}

.companion-card__avatar-container {
  order: 2;
  border-radius: 10px 10px 0 0;
  overflow: hidden;

  @media (min-width: @tablet-width) {
    width: 285px;
    height: 285px;
    border-radius: 20px 20px 0 0;
  }
}

.companion-card__avatar {
  display: block;
  transform: scale(1);
  transition: transform 0.9s ease;

  @media (min-width: @tablet-width) {
    width: 285px;
    height: 285px;
  }
}

.companion-card:hover .companion-card__avatar,
.companion-card:focus-within .companion-card__avatar {
  transform: scale(1.25);
}

.companion-card__info {
  order: 3;
  display: flex;
  flex-wrap: wrap;
  flex-direction: column;
  padding: 27px 45px 12px;

  @media (min-width: @tablet-width) {
    padding: 31px 31px 17px;
  }

  @media (min-width: @desktop-width) {
    padding-top: 35px;
  }
}

.companion-card__name {
  order: 2;
  margin: 0 0 15px;
  font-weight: 700;
  .fontsize(21px);
  text-align: center;

  @media (min-width: @tablet-width) {
    margin-bottom: 24px;
    padding-left: 37px;
    font-size: 24px;
    line-height: 22px;
    text-align: left;
  }
}

.companion-card__link {
  position: relative;
  display: inline-block;
  color: @basic-blue-light;
  .interactions(@basic-blue-light);

  &::before {
    content: "";
    position: absolute;
    top: 50%;
    left: -16px;
    display: inline-block;
    .circle(6px);
    vertical-align: middle;
    background-color: @special-red-darker;
    transform: translateY(-50%);
  }

  @media (min-width: @tablet-width) {
    &::before {
      left: -22px;
      .circle(8px);
    }
  }

  &--online {
    &::before {
      background-color: @special-green;
    }
  }
}

.companion-card__tags {
  order: 3;
  margin: 0 0 15px;
  font-weight: 400;
  line-height: 18px;

  @media (min-width: @tablet-width) {
    margin-bottom: 23px;
    font-size: 20px;
    line-height: 23px;
  }

  &--centered {
    text-align: center;
  }
}

.companion-card__flags {
  order: 1;
  position: relative;
  top: -38px;
  margin-bottom: -24px;

  @media (min-width: @tablet-width) {
    top: -43px;
  }

  @media (min-width: @desktop-width) {
    top: -41px;
  }
}

.companion-card__transport-list {
  order: 4;
  padding-left: 2px;
}

.companion-card__badge {
  order: 1;
  position: relative;
  top: 77px;
  left: 17px;
  margin-top: -60px;

  @media (min-width: @tablet-width) {
    top: 80px;
    left: 22px;
  }

  @media (min-width: @desktop-width) {
    top: 82px;
  }
}

